<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddClient" 
    android:background="@color/gray" >

    <EditText
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPhone"
        android:layout_below="@+id/textPhone"
        android:ems="10"
        android:hint="@string/hintMail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/textFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textMail"
        android:layout_below="@+id/textMail"
        android:hint="@string/hintFacebook"
        android:ems="10" />

    <EditText
        android:id="@+id/textInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textFacebook"
        android:layout_below="@+id/textFacebook"
        android:hint="@string/hintInstagram"
        android:ems="10" />

    <EditText
        android:id="@+id/textBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textName"
        android:layout_below="@+id/textInstagram"
        android:ems="10"
        android:hint="@string/hintBirthday"
        android:inputType="date" />

    <EditText
        android:id="@+id/textObs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textBirthday"
        android:layout_below="@+id/textBirthday"
        android:ems="10"
        android:hint="@string/hintObs"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/textSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textInstagram"
        android:layout_below="@+id/textObs"
        android:hint="@string/hintSeller"
        android:ems="10" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPhone"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonBackAddClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textSeller"
        android:layout_below="@+id/textSeller"
        android:layout_marginRight="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonBack" />

    <Button
        android:id="@+id/buttonSaveClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonBackAddClient"
        android:layout_alignBottom="@+id/buttonBackAddClient"
        android:layout_alignLeft="@+id/textSeller"
        android:layout_marginLeft="16dp"
        android:text="@string/buttonSave" />
    
</RelativeLayout>