<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubTotal" 
    android:background="@color/gray" >
    
    
    <Button
        android:id="@+id/buttonBackSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSaveSubTotal"
        android:layout_alignBottom="@+id/buttonSaveSubTotal"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonSaveSubTotal"
        android:text="@string/buttonBack" />

    <EditText
        android:id="@+id/textQuantitySubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/hintQuantitySubTotal"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/textValueSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textQuantitySubTotal"
        android:layout_below="@+id/textQuantitySubTotal"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/hintValueSubTotal"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/paymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textValueSubTotal"
        android:layout_below="@+id/textValueSubTotal"
        android:layout_marginTop="27dp"
        android:entries="@array/paymentform_list"
        android:prompt="@string/paymentForm" />

    <Button
        android:id="@+id/buttonSaveSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paymentType"
        android:layout_below="@+id/paymentType"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonSave" />

</RelativeLayout>