<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditUser" >

    <Spinner
        android:id="@+id/editPermissonUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textNewPasswdEditUser"
        android:layout_below="@+id/textNewPasswdEditUser"
        android:layout_marginTop="31dp"
        android:entries="@array/permissions_list"
        android:prompt="@string/funcao" />

    <Button
        android:id="@+id/buttonBackEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonEditUser"
        android:layout_alignBottom="@+id/buttonEditUser"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonEditUser"
        android:text="@string/buttonBack" />

    <Button
        android:id="@+id/buttonEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPermissonUser"
        android:layout_below="@+id/editPermissonUser"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="30dp"
        android:text="@string/titleEditUser" />

    <EditText
        android:id="@+id/textEditUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/hintLogin" >

        <requestFocus />

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/textNewPasswdEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEditUserLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/hintNewPasswd"
        android:inputType="textPassword" >
    </EditText>

</RelativeLayout>