<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipal" 
    android:background="@color/gray" >

    <Button
        android:id="@+id/buttonSaveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/buttonSave"
         />

    <EditText
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:hint="@string/hintLogin" />

 
    <EditText
        android:id="@+id/textPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLogin"
        android:layout_below="@+id/textLogin"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintPasswd" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPasswd"
        android:layout_below="@+id/textPasswd"
        android:layout_marginTop="31dp"
        android:entries="@array/permissions_list"
        android:prompt="@string/funcao" />
    
</RelativeLayout>