<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipal" 
    android:background="@color/gray" >

    <TextView
        android:id="@+id/textAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:drawableLeft="@drawable/ic_adduser"
        android:gravity="center"
        android:text="@string/textAddUser"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textListUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textEditUser"
        android:layout_below="@+id/textEditUser"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_listuser"
        android:gravity="center"
        android:text="@string/textListUsers"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textRemoveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAddUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/ic_removeuser"
        android:gravity="center"
        android:text="@string/textRemoveUser"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textRemoveUser"
        android:layout_centerVertical="true"
        android:drawableLeft="@drawable/ic_edituser"
        android:gravity="center"
        android:text="@string/textEditUser"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonExitMenuUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textListUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/buttonExit" />
    
</RelativeLayout>