<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipal" 
    android:background="@color/gray" >

    <TextView
        android:id="@+id/textSellerClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSellerYear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_clientseller"
        android:gravity="center"
        android:text="@string/titleClientSeller"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textSellerMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textSellerDay"
        android:layout_below="@+id/textSellerDay"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/ic_reportmonth"
        android:gravity="center"
        android:text="@string/titleSellerMonth"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textSellerYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textSellerClient"
        android:layout_below="@+id/textSellerMonth"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_reportyear"
        android:gravity="center"
        android:text="@string/titleSellerYear"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textSellerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textSellerYear"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:drawableLeft="@drawable/ic_reportday"
        android:gravity="center"
        android:text="@string/titleSellersDay"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonBackReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSellerClient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/buttonBack" />
    
</RelativeLayout>