<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SellerDecision" 
    android:background="@color/gray" >

      <TextView
          android:id="@+id/textIback"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textYesSeller"
          android:layout_below="@+id/textIexit"
          android:drawableLeft="@drawable/ic_back"
          android:gravity="center"
          android:text="@string/titleIback"
          android:textColor="@color/white"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textIexit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textIback"
          android:layout_below="@+id/textNoSeller"
          android:drawableLeft="@drawable/ic_exit"
          android:gravity="center"
          android:text="@string/titleIexit"
          android:textColor="@color/white"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textNoSeller"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textIexit"
          android:layout_below="@+id/textYesSeller"
          android:drawableLeft="@drawable/ic_dislike"
          android:gravity="center"
          android:text="@string/titleNoSellerr"
          android:textColor="@color/white"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textYesSeller"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:layout_marginLeft="70dp"
          android:layout_marginTop="114dp"
          android:drawableLeft="@drawable/ic_like"
          android:gravity="center"
          android:text="@string/titleYesSeller"
          android:textColor="@color/white"
          android:textSize="20sp" />

</RelativeLayout>