<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfirmPasswd" 
    android:background="@color/gray" >

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonConfirm"
        android:layout_alignBottom="@+id/buttonConfirm"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonConfirm"
        android:text="@string/buttonBack" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPasswd"
        android:layout_below="@+id/textPasswd"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="30dp"
        android:text="@string/buttonEnter" />

    <EditText
        android:id="@+id/textPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:hint="@string/hintPasswd"
        android:inputType="textPassword" />
    
</RelativeLayout>