<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RemoveUser" 
    android:background="@color/gray" >

    <Button
        android:id="@+id/buttonBackRemoveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonRemoveUser"
        android:layout_alignBottom="@+id/buttonRemoveUser"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonRemoveUser"
        android:text="@string/buttonBack" />

    <Button
        android:id="@+id/buttonRemoveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLoginRemoveUser"
        android:layout_below="@+id/textLoginRemoveUser"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/buttonRemove" />

    <EditText
        android:id="@+id/textLoginRemoveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:ems="10"
        android:hint="@string/hintLogin" />
    
</RelativeLayout>